--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,57 @@
 /* MAIN STYLE SHEET
  * By Alexis Gauthiez
  * Version 0.1
- *
- * Colors:  Name    HEX     RGB
- *          Red     #FF4319 rgb(255, 67, 25)
- *          Yellow  #FFF89C rgb(255, 248, 156)
  */
 
-/* COMMON */
 body {
     font-family: 'Open Sans';
-    font-weight: lighter;
-    color: rgba(0, 0, 0, 0.75);
-    background-image: url(../img/header1.gif);
+    
+    min-width: 320px;
+}
+
+h1, h2, h3, h4, h5, h6, nav {
+    font-family: 'Montserrat';
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+header, section, footer {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
     background-attachment: fixed;
 }
 
-h1 {
-    font-family: 'Source Sans Pro';
-    text-align: center;
-    font-size: 50px;
+section { padding: 100px 0; }
+.colored { color: #43d1c2; }
+
+p {
+    text-align: justify;
+    font-weight: lighter;
 }
 
-p { text-align: justify }
-section:nth-child(odd) h1 { color: white; }
-section:nth-child(even) { background-color: white; }
-section:nth-child(odd) {
-    background-color: rgba(255, 255, 255, 0.85); 
-    border-top: 10px solid #FF4319;
-}
-section:nth-child(even) h1 { color: #FF4319; }
-div.overlay { background-color: rgba(255, 67, 25, 0.75); }
-div.white-overlay { background-color: rgba(255, 255, 255, 0.9); }
-section { padding: 50px 0; }
+a { color: #222; }
+a:hover { color: #43d1c2; }
 
-/* HEADER */
-header {
-    font-size: 18px;
-    color: white;
+img { margin: 10px; }
+
+header { height: 100%; }
+header > div {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+nav {
+    padding-top: 20%;
+    bottom: 0;
 }
 
-header div {
-    padding-top: 100px;
-    padding-bottom: 200px;
+nav a:hover
+{
+    color: #222;
+    border-top: 5px solid #43d1c2;
 }
 
-header h1 {
-    font-size: 100px;
-}
-
-footer {
-    background-color: #FF4319;
-    box-shadow: 0 -20px 100px rgba(0, 0, 0, 0.5);
-    padding-bottom: 20px;
-    color: white;
-}
-
-address {
-    font-size: 18px;
-}
+header { background-image: url(../img/bg1.gif);}
+#skills { background-image: url(../img/bg4.gif); }
+#other { background-image: url(../img/bg5.gif); }
